--- a/templates/goals.html
+++ b/templates/goals.html
@@ -18,7 +18,7 @@
     </a> {% endfor %} {% for goal in goals %}
 
     <p>
-        <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a>
+        <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="nav-font">{{goal.goal_name}}</a>
     </p>
     <p>
         {{goal.due_date}}
