--- a/templates/home.html
+++ b/templates/home.html
@@ -17,11 +17,11 @@
 
     <img class="responsive-img" src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
 
-     
-     <div class="row intro">
-        <div class="col m5 l7 hide-on-small-only"><span>Goal set your way to your best year yet!</span></div><a class="col m8 l8"  href="{{url_for('overview_page')}}"> Continue </a>
+
+    <div class="row intro">
+        <div class="col m5 l7 hide-on-small-only">Start achieving your goals today. <div class = "tagline">Goal Track helps make the process of setting and tracking your goals simple. Create plans, track progress, get results! </div><a class="continue" href="{{url_for('overview_page')}}"> Continue <i class="material-icons">arrow_forward</i></a></div>
     </div>
 
- </body>
+</body>
 
 </html>
