--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,29 +8,49 @@
 
 }
 
-.drop_down {
-    margin: 50px;
-    
+.tagline {
+    font-size: 20px;
 }
 
+
+.center {
+    text-align: center;
+    margin-left: 70px;
+}
+.continue {
+    font-size: 25px;
+    font: bolder;
+    margin: 6px;
+    padding: 5px;
+    border: 1px solid black;
+    background-color: transparent;
+    color: black;
+
+}
+
+.absolute {
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
 
 
 .overview {
-    color: white;
-
+    position: absolute;
+    top: 250px;
+    width: 100%;
 }
 
 
-.heading {
-    font-family: 'Roboto Slab', serif;
-   
-    font-size: 30px;
-}
 
 
 
 .not_complete {
-    background-color: #262626;
+    background-color: black;
 
 }
 
@@ -114,7 +134,6 @@
 
 .inprogress {
     height: 100%;
-    font-family: 'Roboto Slab', serif;
     font-size: 25px;
     color: white;
     background-color: black;
@@ -122,6 +141,7 @@
     position: relative;
     margin-right: 100px;
     margin-left: 100px;
+    margin-top: 50px;
 
 
 }
@@ -131,18 +151,30 @@
     height: 100%;
     font-family: 'Roboto Slab', serif;
     font-size: 25px;
-    color: white;
+    color: black;
     margin-right: 100px;
     margin-left: 100px;
     margin-bottom: 2px;
-    background-color: #262626;
+    background-color: #e6e6e6;
     padding: 30px;
 
 }
 
 .collapsible-header {
-    background-color: #262626;
-    color: #ff4000;
+    background-color: #e6e6e6;
+    color: black;
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    padding: 0px;
+}
+
+.collapsible-body {
+    color: white;
+}
+
+
+body {
+    font-family: 'Roboto Slab', serif;
 }
 
 .goal_form {
@@ -181,17 +213,18 @@
     border: 1px;
     position: absolute;
     top: 40px;
-    right: 16px;
+    right: 20px;
 
 }
 
-.newstep {
+.mark_done {
     font-family: 'Roboto Slab', serif;
-    font-size: 30px;
-    background-color: #ff4000;
+    font-size: 20px;
     color: white;
     border: 1px;
     position: absolute;
+    right: 10%;
+    background-color: #ff4000;
 
 
 }
@@ -218,17 +251,17 @@
 }
 
 
-
 .goal_status {
 
     font-style: italic;
+
 
 
 }
 
 .link {
     font-style: italic;
-    color: white;
+
 
 }
 
@@ -258,7 +291,6 @@ h3 {
 
 
 
-
 .logo {
     font-family: 'Fredoka One', cursive;
     margin-left: 10px;
@@ -268,7 +300,7 @@ h3 {
 }
 
 nav a {
-    color: #B71C1C;
+    color: #ff4000;
 }
 
 .active {
@@ -342,7 +374,6 @@ nav {
 
 .btn {
     background-color: #ff4000;
-    border-radius: 40px;
 
 }
 
@@ -369,13 +400,8 @@ nav {
     text-align: center;
     font-family: 'Roboto Slab', serif;
     font-size: 25px;
-    color: white;
+    color: black;
 }
-
-.outline {}
-
-
-
 
 
 
